fix: hide update button for viewer role in collapsed mode

--- a/frontend/src/container/ExplorerOptions/ExplorerOptions.styles.scss
+++ b/frontend/src/container/ExplorerOptions/ExplorerOptions.styles.scss
@@ -1,5 +1,5 @@
 .hide-update {
-	left: calc(50% - 41px) !important;
+	left: calc(50% - 72px) !important;
 }
 .explorer-update {
 	position: fixed;
